2002-09-15  Felix Natter  <fnatter@gmx.net>

	* typefortune: allow (E)xit: have to add a *:END label
	and K:12:END at the beginning

2002-09-14  Felix Natter  <fnatter@gmx.net>

	* configure.in: Christian Weisgerber <naddy@mips.inka.de>:
	fix a bug in configure.in: AC_CHECK_LIB doesn't call
	AC_DEFINE so now we do it explicitly:
	AC_CHECK_LIB(curses, wbkgdset,
	  [AC_DEFINE(HAVE_LIBCURSES, 1, [Is curses available])
	    LIBS="-lcurses $LIBS"])


2002-06-28  Hynek Hanke  <hanke@volny.cz>

	* findwords.sh: New script to help with creating lessons.

2002-05-20  Felix Natter  <fnatter@gmx.net>

	* gtypist.c: do the same as last item for headers

2002-05-18  Felix Natter  <fnatter@gmx.net>

	* configure.in: check for ncurses if curses is not available
	(but use 2x AC_CHECK_LIB instead of AC_SEARCH_LIBS to support Solaris)

2002-04-25  Michael Opdenacker <michaelo@gnu.org>

	* Replaced `cz' by `cs' in all file names.
	* *.po: Updated with the msgmerged files; updated the version
	  and package name, as well as the copyright notices.

2002-04-22  Michael Opdenacker <michaelo@gnu.org>

	* gtypist.c, Makefile.am: for consistency with 'PACKAGE_LOCALE_DIR'
	  replaced by `LOCALEDIR', replaced `PACKAGE_DATA_DIR' by `DATADIR'.
	* autogen.sh: now checks that texinfo is installed.
	  Runs `make' (to generate `doc/version.texi') and generates
	  the html manuals.

2002-04-18  Michael Opdenacker <michaelo@gnu.org>

	* gtypist.c: replaced '1998-2001' by `1998, 1999, 2000, 2001, 2002'
	  in the copyright notices (following GNU guidelines).
	* autogen.sh: made `help2man' mandatory for building sources.
	* configure.in: suppressed the check for help2man, as the manual
	  is now always created in the sources. 
        * doc/fdl.texi: temporary hack of the original file, so that building
	  works (to be fixed very soon).

2002-04-16  Michael Opdenacker <michaelo@gnu.org>

	* po/: new Makevars file as recommended by gettextize.